style: 로그인/회원가입 페이지 스타일 적용

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,16 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+    format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 body {
   font-size: 18px;
-  font-family: Pretendard;
+  font-family: Pretendard-Regular;
   margin: 0;
   font-style: normal;
 }
