--- a/components/Input.module.css
+++ b/components/Input.module.css
@@ -5,6 +5,8 @@
   border-radius: 8px;
   border: 1px solid #ccd5e3;
   display: flex;
+  margin: 0 0 4px;
+  background-color: white;
 }
 .inputContainer:focus-within {
   outline: 1px solid #6d6afe;
