feat: 16주 차 위클리 미션 -url path 변경 -리다이렉트

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,6 +124,10 @@ nav {
   margin: 12px 0 20px;
 }
 
+.avatar-image {
+  border-radius: 9999px;
+}
+
 .link-search-card-list {
   margin: 32px;
 }
