--- a/components/Input.module.css
+++ b/components/Input.module.css
@@ -11,7 +11,7 @@
 .inputContainer:focus-within {
   outline: 1px solid #6d6afe;
 }
-.inputContainer.red {
+.inputContainer.warning {
   border: none;
   outline: 1px solid #ff5b56;
 }
